<resources>
    <string name="app_name">RSA</string>
    <string name="rsa">RSA</string>
    <string name="cryptosystem">CRYPTOSYSTEM</string>
    <string name="manual">MANUAL</string>
    <string name="automatico">AUTOMATICO</string>
    <string name="logo">logo</string>
    <string name="ingrese_datos">Datos</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="E">E</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="clavePublica">Claves Públicas</string>
    <string name="claveSecreta">Clave Secreta</string>
    <string name="claves">Claves</string>
    <string name="n">n :</string>
    <string name="e">e : </string>
    <string name="d">d : </string>
    <string name="createMessage">Crear Mensaje</string>
    <string name="exit">Salir</string>
    <string name="barMensaje">Mensaje</string>
    <string name="Escriba_el_mensaje">Escriba el mensaje</string>
    <string name="encode">ENCRIPTAR</string>
    <string name="encrypt">Encriptacion</string>
    <string name="blocks">Texto en Bloques</string>
    <string name="textoEncriptado">Texto Encriptado</string>
    <string name="descifrar">Descifrar</string>
    <string name="decrypt">Desencriptacion</string>
    <string name="textoDesencriptado">Texto Decifrado</string>
    <string name="salir2">SALIR</string>
    <string name="anotherMessage">OTRO MENSAJE</string>
    <string name="MENU">MENU</string>
</resources>
