<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/txtN"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="22dp"
        android:text="N"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/lblN"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPublicKeys"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="373dp"
        android:layout_height="70dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorBar"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/claves"
        android:textColor="@color/colorWhite"
        android:textSize="21sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblPublicKeys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="38dp"
        android:text="@string/clavePublica"
        android:textColor="@color/colorBar"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/lblN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="22dp"
        android:text="@string/n"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPublicKeys" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="30dp"
        android:text="@string/e"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblN" />

    <TextView
        android:id="@+id/txtE"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/E"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtN"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/lblSecretKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="129dp"
        android:text="@string/claveSecreta"
        android:textColor="@color/colorTextButton"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPublicKeys" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="22dp"
        android:text="@string/d"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSecretKey" />

    <TextView
        android:id="@+id/txtD"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:text="D"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/textView11"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSecretKey"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnExit"
        android:onClick="btnExit_onclick"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginBottom="53dp"
        android:layout_marginStart="34dp"
        android:background="@drawable/button_manual"
        android:text="@string/exit"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnCreateMessage"
        android:onClick="btnCreateMessage_onClick"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginBottom="53dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_manual"
        android:text="@string/createMessage"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintLeft_toRightOf="@+id/btnExit"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>