<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnAnotherMessage"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="61dp"
        android:background="@drawable/button_manual"
        android:onClick="btnAnotherMessage_onclick"
        android:text="@string/anotherMessage"
        android:textColor="@color/colorWhite"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorBar"
        android:paddingEnd="0dp"
        android:paddingStart="15dp"
        android:paddingTop="20dp"
        android:text="@string/decrypt"
        android:textColor="@color/colorWhite"
        android:textSize="21sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blocks"
        android:textColor="@color/colorTextButton"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.038"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <ScrollView
        android:id="@+id/scrollViewBlocks"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDecryptedBlocks"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:maxLines="100"
                android:scrollbars="vertical"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/textoDesencriptado"
        android:textColor="@color/colorTextButton"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewBlocks" />

    <ScrollView
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:id="@+id/scrollView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTextDecrypted"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:maxLines="100"
                android:scrollbars="vertical"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="61dp"
        android:background="@drawable/button_manual"
        android:onClick="btnSalir_onclick"
        android:text="@string/MENU"
        android:textColor="@color/colorWhite"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

</android.support.constraint.ConstraintLayout>