<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:labelFor="@+id/txtMessage"
        android:id="@+id/lblMessage"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/colorBar"
        android:paddingEnd="0dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:text="@string/barMensaje"
        android:textColor="@color/colorWhite"
        android:textSize="21sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="253dp"
        android:layout_height="95dp"
        android:ems="10"
        android:hint="@string/Escriba_el_mensaje"
        android:inputType="textMultiLine"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/lblMessage"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_editor_absoluteY="122dp" />

    <Button
        android:id="@+id/btnEncode"
        android:onClick="btnEncode_onclick"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_manual"
        android:text="@string/encode"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessage" />

    <ProgressBar
        android:id="@+id/progressBarMessage"
        style="?android:attr/progressBarStyle"
        android:layout_width="171dp"
        android:layout_height="152dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEncode"
        app:layout_constraintVertical_bias="0.436"
        tools:visibility="invisible" />

</android.support.constraint.ConstraintLayout>